--- a/ansible/roles/openldap/tasks/redhat/redhat.yml
+++ b/ansible/roles/openldap/tasks/redhat/redhat.yml
@@ -24,14 +24,14 @@
     src: "/usr/share/sendmail-cf/sendmail.schema"
     dest: "/etc/openldap/schema/mail.schema"
 
-- name: create tmp directory
-  tasks:
-    - file:
-      path: "/tmp/openldap"
-      state: directory
-    - file:
-      path: "/tmp/ldif"
-      state: directory
+- name: creating tmp directory
+  file:
+    path: "/tmp/openldap"
+    state: directory
+- name: creating tmp directory
+  file:
+    path: "/tmp/ldif"
+    state: directory
 
 - name: copy tmp directory
   copy:
@@ -39,5 +39,21 @@
     dest: "/tmp/openldap/schema_conv.conf"
 
 - name: merge schmea defines
-  ansible.builtin.shell: <
+  shell:
     slaptest -f /tmp/openldap/schema_conv.conf -F /tmp/ldif/
+
+- name: modifiy schema defines
+  shell: |
+    cp /tmp/ldif/cn=config/cn=schema/cn=\{[0-9]\}mail.ldif /etc/openldap/schema/mail.ldif
+    sed -i s/dn:\ cn=\{\[0-9\]\}mail/dn:\ cn=mail,cn=schema,cn=config/g /etc/openldap/schema/mail.ldif
+    sed -i s/cn:\ \{[0-9]\}mail/cn:\ mail/g /etc/openldap/schema/mail.ldif
+    sed -i /structuralObjectClass/d /etc/openldap/schema/mail.ldif
+    sed -i /creatorsName/d /etc/openldap/schema/mail.ldif
+    sed -i /createTimestamp/d /etc/openldap/schema/mail.ldif
+    sed -i /entryCSN/d /etc/openldap/schema/mail.ldif
+    sed -i /modifiersName/d /etc/openldap/schema/mail.ldif
+    sed -i /modifyTimestamp/d /etc/openldap/schema/mail.ldif
+
+- name: add schema defines
+  shell: |
+    ldapadd -Q -Y EXTERNAL -H ldapi:/// -f /etc/openldap/schema/mail.ldif
