--- a/playbooks/local/ansible.cfg
+++ b/playbooks/local/ansible.cfg
@@ -12,7 +12,7 @@
 
 # some basic default values...
 
-inventory = ./inventories/dev
+inventory = ./inventory
 #library        = /usr/share/my_modules/
 #remote_tmp     = $HOME/.ansible/tmp
 #local_tmp      = $HOME/.ansible/tmp
@@ -54,7 +54,7 @@ inventory = ./inventories/dev
 # gather_timeout = 10
 
 # additional paths to search for roles in, colon separated
-#roles_path    = /etc/ansible/roles
+roles_path    = ../../ansible/roles
 
 # uncomment this to disable SSH key host checking
 #host_key_checking = False
