--- a/roles/openldap/tasks/main.yml
+++ b/roles/openldap/tasks/main.yml
@@ -1,14 +1,26 @@
 ---
 # roles/example/tasks/main.yml
-- name: Install the correct OpenLDAP server for RHEL
-  import_tasks: redhat/redhat.yml
-  when: ansible_facts['os_family']|lower == 'redhat'
-  vars:
-    schema_location: /etc/openldap/schema
+#- name: gather os specific variables
+#  vars_files:
+#    - "{{ansible_facts['distribution']}}-{{ansible_facts['distribution_major_version']}}.yml"
 
-- name: Install the correct OpenLDAP server for Debian
-  import_tasks: debian/debian.yml
-  when: ansible_facts['os_family']|lower == 'debian'
-  vars:
-    schema_location: /etc/ldap/schema
 
+- name: Load a variable file based on the OS type, or a default if not found. Using free-form to specify the file.
+  include_vars: "{{ lookup('first_found', params) }}"
+  vars:
+    params:
+      files:
+        - '{{ansible_distribution}}.yaml'
+      paths:
+        - 'vars'
+- debug:
+    msg: "{{ package_name }}"
+
+- name: "Downloading packages"
+  package:
+     name: "{{ package_name }}"
+     state: present
+#- name: "starting services"
+#  service:
+#     name: "{{ service_name }}"
+#     state: started
