--- a/roles/openldap/vars/fedora.yaml
+++ b/roles/openldap/vars/fedora.yaml
@@ -4,3 +4,9 @@ package_name:
   - openldap-servers
   - openldap-clients
   - sendmail-cf
+  - libselinux-python
+service_name:
+  - slapd
+schema:
+  location: /etc/openldap/schema
+  origin: /usr/share/sendmail-cf/sendmail.schema
