--- a/roles/openldap/tasks/settings/main.yml
+++ b/roles/openldap/tasks/settings/main.yml
@@ -1,14 +1,8 @@
 - name: Copying sendmail schema file to openldap.
   copy:
-    src: "/usr/share/sendmail-cf/sendmail.schema"
-    dest: "{{schema_location}}/mail.schema"
-  when: ansible_facts['os_family']|lower == 'debian'
-
-- name: Copying sendmail schema file to openldap.
-  copy:
-    src: "/usr/share/sendmail-cf/sendmail.schema"
-    dest: "{{schema_location}}/mail.schema"
-  when: ansible_facts['os_family']|lower == 'redhat'
+    src: "{{schema.origin}}"
+    dest: "{{schema.location}}/mail.schema"
+    remote_src: yes
 
 - name: creating tmp directory
   file:
@@ -30,16 +24,16 @@
 
 - name: modifiy schema defines
   shell: |
-    cp /tmp/ldif/cn=config/cn=schema/cn=\{[0-9]\}mail.ldif {{schema_location}}/mail.ldif
-    sed -i s/dn:\ cn=\{\[0-9\]\}mail/dn:\ cn=mail,cn=schema,cn=config/g {{schema_location}}/mail.ldif
-    sed -i s/cn:\ \{[0-9]\}mail/cn:\ mail/g {{schema_location}}/mail.ldif
-    sed -i /structuralObjectClass/d {{schema_location}}/mail.ldif
-    sed -i /creatorsName/d {{schema_location}}/mail.ldif
-    sed -i /createTimestamp/d {{schema_location}}/mail.ldif
-    sed -i /entryCSN/d {{schema_location}}/mail.ldif
-    sed -i /modifiersName/d {{schema_location}}/mail.ldif
-    sed -i /modifyTimestamp/d {{schema_location}}/mail.ldif
+    cp /tmp/ldif/cn=config/cn=schema/cn=\{[0-9]\}mail.ldif {{schema.location}}/mail.ldif
+    sed -i s/dn:\ cn=\{\[0-9\]\}mail/dn:\ cn=mail,cn=schema,cn=config/g {{schema.location}}/mail.ldif
+    sed -i s/cn:\ \{[0-9]\}mail/cn:\ mail/g {{schema.location}}/mail.ldif
+    sed -i /structuralObjectClass/d {{schema.location}}/mail.ldif
+    sed -i /creatorsName/d {{schema.location}}/mail.ldif
+    sed -i /createTimestamp/d {{schema.location}}/mail.ldif
+    sed -i /entryCSN/d {{schema.location}}/mail.ldif
+    sed -i /modifiersName/d {{schema.location}}/mail.ldif
+    sed -i /modifyTimestamp/d {{schema.location}}/mail.ldif
 
 - name: add schema defines
   shell: |
-    ldapadd -Q -Y EXTERNAL -H ldapi:/// -f {{schema_location}}/mail.ldif
+    ldapadd -Q -Y EXTERNAL -H ldapi:/// -f {{schema.location}}/mail.ldif
