--- a/roles/sendmail/tasks/main.yml
+++ b/roles/sendmail/tasks/main.yml
@@ -1,10 +1,11 @@
 ---
+# tasks file for sendmail
 - name: Load a variable file based on the OS type, or a default if not found. Using free-form to specify the file.
   include_vars: "{{ lookup('first_found', params) }}"
   vars:
     params:
       files:
-        - '{{ansible_distribution}}.yaml'
+        - '{{ansible_os_family}}.yml'
       paths:
         - 'vars'
 
@@ -27,6 +28,3 @@
      name: "{{ item }}"
      state: started
   with_items: "{{ service_name }}"
-
-- name: Importing settings
-  include_tasks: "settings/post.yml"
